# local-finance

./: .gitignore  README.md  app.py  pyproject.toml
src/: database.py  engine.py  importer.py  projections_engine.py  queries.py
