[project]
name = "local-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-sqlite>=1.9.0",
    "connectorx>=0.4.4",
    "fastexcel>=0.18.0",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
]
